# rust-api

./: Cargo.toml  README.md
migrations/2023-10-08-210336_create_users/: up.sql
src/: main.rs  schema.rs
src/controllers/: create_user_controller.rs  delete_user_controller.rs  get_user_controller.rs  get_users_controller.rs  login_user_controller.rs  mod.rs  update_user_controller.rs
src/database/: database.rs
src/models/: user_model.rs
src/services/: create_user_service.rs  delete_user_service.rs  get_user_service.rs  get_users_service.rs  login_user_service.rs  mod.rs  update_user_service.rs
src/utils/: jwt.rs  mod.rs  validate_params.rs
