[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres"] }
regex = "1.10.0"
bcrypt = "0.15.0"
jsonwebtoken = "9"
actix-web-httpauth = "0.8.1"
chrono = "0.4.24"
